[FIX] mail: emoji button color and alignment
task-2266582

--- a/addons/mail/static/src/messaging/component/composer/composer.scss
+++ b/addons/mail/static/src/messaging/component/composer/composer.scss
@@ -94,6 +94,7 @@
 
 .o_Composer_primaryToolButtons {
     display: flex;
+    align-items: center;
 }
 
 .o_Composer_sidebarMain {
@@ -184,6 +185,7 @@
 }
 
 .o_Composer_button {
+    color: gray('600');
 
     &.o-open{
         background-color: gray('200');
